✨  Update On-Page SEO

--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Marketing Blog - Expert Tips & Insights | AdtoLeadz</title>
-    <meta name="description" content="Stay updated with the latest digital marketing trends, tips, and insights from AdtoLeadz. Expert advice on web design, SEO, social media marketing, and more.">
-    <meta name="keywords" content="digital marketing blog, SEO tips, social media marketing, web design trends, marketing insights, AdtoLeadz blog">
+    <title>Online Marketing Blog - Expert Tips & Insights | AdtoLeadz</title>
+    <meta name="description" content="Stay updated with the latest online marketing trends, tips, and insights from AdtoLeadz. Expert advice on web design, SEO, social media marketing, and more.">
+    <meta name="keywords" content="online marketing blog, SEO tips, social media marketing, web design trends, marketing insights, AdtoLeadz blog">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">Digital Marketing Blog - Expert Insights & Tips</h1>
+                    <h1 class="hero-title" data-aos="fade-up">Online Marketing Blog - Expert Insights & Tips</h1>
                     <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Expert insights, latest trends, and actionable tips to grow your business online</p>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     <div class="featured-post">
                         <div class="featured-card">
                             <div class="featured-image">
-                                <img src="https://via.placeholder.com/800x400/2E78C0/FFFFFF?text=Featured+Article" alt="Featured Post" class="img-fluid">
+                                <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="SEO Guide 2024 - Digital Marketing Analytics and Search Optimization Strategies" class="img-fluid">
                                 <div class="featured-badge">
                                     <i class="fas fa-star"></i> Featured
                                 </div>
@@ -237,7 +237,7 @@
                 <div class="col-lg-8">
                     <div class="blog-header mb-5" data-aos="fade-up">
                         <h2 class="section-title">Latest Articles</h2>
-                        <p class="section-subtitle">Stay updated with the latest insights and trends in digital marketing</p>
+                        <p class="section-subtitle">Stay updated with the latest insights and trends in online marketing</p>
                     </div>
 
                     <!-- Blog Grid -->
@@ -245,7 +245,7 @@
                         <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                             <div class="blog-card">
                                 <div class="blog-image">
-                                    <img src="https://via.placeholder.com/400x250/60B0E0/FFFFFF?text=Social+Media+Marketing" alt="Social Media Marketing" class="img-fluid">
+                                    <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Social Media Marketing Agency Madurai - Digital Marketing Strategy" class="img-fluid">
                                     <div class="blog-category-badge">Social Media</div>
                                 </div>
                                 <div class="blog-content">
@@ -265,7 +265,7 @@
                         <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                             <div class="blog-card">
                                 <div class="blog-image">
-                                    <img src="https://via.placeholder.com/400x250/1A4A80/FFFFFF?text=Web+Design" alt="Web Design" class="img-fluid">
+                                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Web Design Company Madurai - Professional Website Development" class="img-fluid">
                                     <div class="blog-category-badge">Web Design</div>
                                 </div>
                                 <div class="blog-content">
@@ -285,7 +285,7 @@
                         <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="300">
                             <div class="blog-card">
                                 <div class="blog-image">
-                                    <img src="https://via.placeholder.com/400x250/2E78C0/FFFFFF?text=Content+Marketing" alt="Content Marketing" class="img-fluid">
+                                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Content Marketing Services Madurai - Digital Marketing Strategy" class="img-fluid">
                                     <div class="blog-category-badge">Content</div>
                                 </div>
                                 <div class="blog-content">
@@ -305,7 +305,7 @@
                         <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="400">
                             <div class="blog-card">
                                 <div class="blog-image">
-                                    <img src="https://via.placeholder.com/400x250/60B0E0/FFFFFF?text=Email+Marketing" alt="Email Marketing" class="img-fluid">
+                                    <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Email Marketing Services Madurai - Digital Marketing Campaigns" class="img-fluid">
                                     <div class="blog-category-badge">Email Marketing</div>
                                 </div>
                                 <div class="blog-content">
@@ -325,7 +325,7 @@
                         <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="500">
                             <div class="blog-card">
                                 <div class="blog-image">
-                                    <img src="https://via.placeholder.com/400x250/1A4A80/FFFFFF?text=Analytics" alt="Analytics" class="img-fluid">
+                                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Digital Marketing Analytics Madurai - SEO Performance Tracking" class="img-fluid">
                                     <div class="blog-category-badge">Analytics</div>
                                 </div>
                                 <div class="blog-content">
@@ -333,8 +333,8 @@
                                         <span class="blog-date"><i class="fas fa-calendar me-1"></i>December 3, 2024</span>
                                         <span class="blog-author"><i class="fas fa-user me-1"></i>By Michael Chen</span>
                                     </div>
-                                    <h4 class="blog-title">Digital Marketing Analytics Guide</h4>
-                                    <p class="blog-excerpt">Understand how to measure and analyze your digital marketing performance. Learn about key metrics, tools, and how to make data-driven decisions.</p>
+                                    <h4 class="blog-title">Online Marketing Analytics Guide</h4>
+                                    <p class="blog-excerpt">Understand how to measure and analyze your online marketing performance. Learn about key metrics, tools, and how to make data-driven decisions.</p>
                                     <div class="blog-footer">
                                         <span class="read-time"><i class="fas fa-clock me-1"></i>10 min read</span>
                                         <a href="single-blog.html" class="btn btn-outline-primary btn-sm">Read More</a>
@@ -345,7 +345,7 @@
                         <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="600">
                             <div class="blog-card">
                                 <div class="blog-image">
-                                    <img src="https://via.placeholder.com/400x250/2E78C0/FFFFFF?text=PPC+Advertising" alt="PPC Advertising" class="img-fluid">
+                                    <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="PPC Advertising Services Madurai - Pay Per Click Marketing" class="img-fluid">
                                     <div class="blog-category-badge">PPC</div>
                                 </div>
                                 <div class="blog-content">
@@ -398,7 +398,7 @@
                                 <i class="fas fa-envelope me-2"></i>Newsletter
                             </h5>
                             <div class="newsletter-form">
-                                <p>Get the latest digital marketing insights delivered to your inbox weekly.</p>
+                                <p>Get the latest online marketing insights delivered to your inbox weekly.</p>
                                 <form>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" placeholder="Your email address">
@@ -419,7 +419,7 @@
                             <div class="recent-posts">
                                 <div class="recent-post">
                                     <div class="recent-post-image">
-                                        <img src="https://via.placeholder.com/80x60/2E78C0/FFFFFF?text=SEO" alt="Recent Post" class="img-fluid">
+                                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=200&q=80" alt="SEO Tips 2024 Madurai - Search Engine Optimization Guide" class="img-fluid">
                                     </div>
                                     <div class="recent-post-content">
                                         <h6><a href="single-blog.html">10 Essential SEO Tips for 2024</a></h6>
@@ -428,7 +428,7 @@
                                 </div>
                                 <div class="recent-post">
                                     <div class="recent-post-image">
-                                        <img src="https://via.placeholder.com/80x60/60B0E0/FFFFFF?text=SMM" alt="Recent Post" class="img-fluid">
+                                        <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=200&q=80" alt="Social Media Marketing Trends 2024 Madurai - Digital Marketing Strategy" class="img-fluid">
                                     </div>
                                     <div class="recent-post-content">
                                         <h6><a href="single-blog.html">Social Media Marketing Trends 2024</a></h6>
@@ -437,7 +437,7 @@
                                 </div>
                                 <div class="recent-post">
                                     <div class="recent-post-image">
-                                        <img src="https://via.placeholder.com/80x60/1A4A80/FFFFFF?text=Web" alt="Recent Post" class="img-fluid">
+                                        <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=200&q=80" alt="Web Design Best Practices 2024 Madurai - Professional Website Development" class="img-fluid">
                                     </div>
                                     <div class="recent-post-content">
                                         <h6><a href="single-blog.html">Web Design Best Practices for 2024</a></h6>
