--- a/seo.html
+++ b/seo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional SEO Services in Madurai | Boost Your Search Rankings | AdtoLeadz</title>
     <meta name="description" content="Get expert SEO services in Madurai with AdtoLeadz. Our proven strategies help businesses improve search rankings, increase organic traffic, and grow online presence. Free consultation available.">
-    <meta name="keywords" content="SEO company Madurai, affordable SEO company in Madurai for small business, SEO marketing company near me, google SEO price, SEO services in Madurai, content marketing company, online marketing services, PPC management services">
+    <meta name="keywords" content="SEO company Madurai, affordable SEO company in Madurai for small business, SEO marketing company near me, google SEO price, SEO services in Madurai, content marketing company, PPC management services">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">Why SEO Matters</h2>
+                    <h2 class="section-title">Why Search Optimization Matters</h2>
                     <p class="section-subtitle">The benefits of ranking higher in search results</p>
                 </div>
             </div>
@@ -118,8 +118,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">Our Comprehensive SEO Solutions</h2>
-                    <p class="section-subtitle">Boost your search rankings with our proven SEO strategies and expert implementation</p>
+                    <h2 class="section-title">Our Comprehensive Search Optimization Solutions</h2>
+                    <p class="section-subtitle">Boost your search rankings with our proven organic marketing strategies and expert implementation</p>
                 </div>
             </div>
             <div class="row">
@@ -146,7 +146,7 @@
                             <i class="fas fa-edit"></i>
                         </div>
                         <div class="service-content">
-                            <h4>On-Page SEO</h4>
+                            <h4>On-Page Optimization</h4>
                             <p>We optimize your website's content, structure, and technical elements to improve search engine visibility and user experience.</p>
                             <ul class="service-features">
                                 <li>Title tags and meta descriptions</li>
@@ -163,7 +163,7 @@
                             <i class="fas fa-cogs"></i>
                         </div>
                         <div class="service-content">
-                            <h4>Technical SEO</h4>
+                            <h4>Technical Optimization</h4>
                             <p>We ensure your website meets all technical requirements for optimal search engine crawling and indexing.</p>
                             <ul class="service-features">
                                 <li>Site speed optimization</li>
@@ -250,7 +250,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">Our SEO Process</h2>
+                    <h2 class="section-title">Our Search Optimization Process</h2>
                     <p class="section-subtitle">A systematic approach to improving your search rankings</p>
                 </div>
             </div>
@@ -263,8 +263,8 @@
                                 <div class="process-icon">
                                     <i class="fas fa-clipboard-check"></i>
                                 </div>
-                                <h4>SEO Audit</h4>
-                                <p>We conduct a comprehensive analysis of your current SEO performance, identifying opportunities and issues that need attention.</p>
+                                <h4>Search Performance Audit</h4>
+                                <p>We conduct a comprehensive analysis of your current search performance, identifying opportunities and issues that need attention.</p>
                             </div>
                             <div class="process-card" data-aos="fade-up" data-aos-delay="200">
                                 <div class="step-number">2</div>
@@ -296,7 +296,7 @@
                                     <i class="fas fa-chart-line"></i>
                                 </div>
                                 <h4>Monitoring & Reporting</h4>
-                                <p>We continuously monitor your SEO performance and provide detailed reports on progress and results.</p>
+                                <p>We continuously monitor your search performance and provide detailed reports on progress and results.</p>
                             </div>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Frequently Asked Questions</h2>
-                    <p class="section-subtitle">Common questions about our SEO services in Madurai</p>
+                    <p class="section-subtitle">Common questions about our search optimization services in Madurai</p>
                 </div>
             </div>
             <div class="row">
@@ -320,7 +320,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="faq1">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
-                                    How much does SEO cost in Madurai?
+                                    How much does search optimization cost in Madurai?
                                 </button>
                             </h2>
                             <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
@@ -332,36 +332,36 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="faq2">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
-                                    What makes you the best SEO company in Madurai?
+                                    What makes you the best search optimization company in Madurai?
                                 </button>
                             </h2>
                             <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We are a leading SEO company in Madurai with 3+ years of experience. Our team specializes in providing SEO services for businesses of all sizes, from startups to large enterprises. We offer comprehensive online marketing services including content marketing and PPC management.
+                                    We are a leading search optimization company in Madurai with 3+ years of experience. Our team specializes in providing organic marketing services for businesses of all sizes, from startups to large enterprises. We offer comprehensive digital marketing services including content marketing and PPC management.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="faq3">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
-                                    Do you provide SEO and digital marketing company for local business?
+                                    Do you provide search optimization and digital marketing services for local businesses?
                                 </button>
                             </h2>
                             <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Yes! We are a comprehensive SEO and digital marketing company that helps local businesses in Madurai improve their online presence. We provide targeted SEO strategies, local search optimization, and Google My Business management to help you reach local customers.
+                                    Yes! We are a comprehensive search optimization and digital marketing company that helps local businesses in Madurai improve their online presence. We provide targeted organic marketing strategies, local search optimization, and Google My Business management to help you reach local customers.
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="faq4">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
-                                    What online marketing services do you offer besides SEO?
+                                    What digital marketing services do you offer besides search optimization?
                                 </button>
                             </h2>
                             <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Besides SEO services, we offer comprehensive online marketing services including social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                    Besides search optimization services, we offer comprehensive digital marketing services including social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
                                 </div>
                             </div>
                         </div>
