--- a/smo.html
+++ b/smo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media Optimization (SMO) Services - Maximize Your Social Presence | AdtoLeadz</title>
-    <meta name="description" content="Professional Social Media Optimization (SMO) services including profile optimization, audience targeting, and analytics. Maximize your social media engagement and brand awareness.">
-    <meta name="keywords" content="SMO services, social media optimization, profile optimization, social media analytics, brand awareness, social media engagement">
+    <meta name="description" content="Professional Social Media Optimization (SMO) services in Madurai. We optimize your social profiles, target the right audience, and boost engagement. Maximize your social media presence with AdtoLeadz.">
+    <meta name="keywords" content="SMO services Madurai, social media optimization Madurai, profile optimization, social media analytics, brand awareness, social media engagement, SMO company Madurai">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="intro-image">
-                        <img src="https://via.placeholder.com/600x400/1A4A80/FFFFFF?text=SMO+Strategy" alt="SMO Strategy" class="img-fluid rounded">
+                        <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="SMO Strategy Madurai - Social Media Optimization Services" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@
             <div class="row">
                 <div class="col-lg-6 mb-4" data-aos="fade-right">
                     <div class="benefits-image">
-                        <img src="https://via.placeholder.com/600x400/60B0E0/FFFFFF?text=SMO+Benefits" alt="SMO Benefits" class="img-fluid rounded">
+                        <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="SMO Benefits Madurai - Social Media Marketing Advantages" class="img-fluid rounded">
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4" data-aos="fade-left">
