--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expert Social Media Marketing in Madurai | Grow Your Brand Online | AdtoLeadz</title>
     <meta name="description" content="Elevate your brand with our social media marketing services in Madurai. We create engaging content, manage campaigns, and build communities that drive real business results for your company.">
-    <meta name="keywords" content="social media marketing agency Madurai, social media marketing for small business, best social media marketing, organic social media marketing, B2B social media agency, social media agency, marketing agency for startups, online marketing services">
+    <meta name="keywords" content="social media marketing agency Madurai, best social media marketing, organic social media marketing, social media agency, marketing agency for startups">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">Transform Your Social Media Presence</h2>
+                    <h2 class="section-title">Transform Your Online Presence</h2>
                     <p class="section-subtitle">Turn your social media presence into a powerful marketing tool that drives real business results</p>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     <div class="overview-content">
                         <h3>Why Social Media Marketing Matters</h3>
                         <p class="section-text">Social media marketing is essential for modern businesses. With billions of active users across various platforms, social media provides unprecedented opportunities to connect with your target audience, build brand awareness, and drive sales.</p>
-                        <p class="section-text">Our comprehensive social media marketing services help you establish a strong online presence, engage with your customers, and convert followers into loyal customers. We create compelling content, manage your social media accounts, and run targeted advertising campaigns to maximize your ROI.</p>
+                        <p class="section-text">Our comprehensive social media marketing services help you establish a strong online presence, engage with your customers, and convert followers into loyal customers. We create compelling content, manage your social accounts, and run targeted advertising campaigns to maximize your ROI.</p>
                         <div class="stats-row">
                             <div class="stat-item">
                                 <h4>4.8B+</h4>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="overview-image">
-                        <img src="https://via.placeholder.com/600x400/60B0E0/FFFFFF?text=Social+Media+Strategy" alt="Social Media Strategy" class="img-fluid rounded">
+                        <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Social Media Marketing Strategy Madurai - Digital Marketing Agency" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Platforms We Cover</h2>
-                    <p class="section-subtitle">We help you succeed on all major social media platforms</p>
+                    <p class="section-subtitle">We help you succeed on all major social platforms</p>
                 </div>
             </div>
             <div class="row">
@@ -227,14 +227,14 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Success Stories</h2>
-                    <p class="section-subtitle">Real results from our social media marketing campaigns</p>
+                    <p class="section-subtitle">Real results from our social media campaigns</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="case-study-card">
                         <div class="case-study-image">
-                            <img src="https://via.placeholder.com/400x250/2E78C0/FFFFFF?text=E-commerce+Success" alt="E-commerce Case Study" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="E-commerce Social Media Marketing Success Madurai - Digital Marketing Results" class="img-fluid">
                         </div>
                         <div class="case-study-content">
                             <h4>E-commerce Brand Growth</h4>
@@ -259,7 +259,7 @@
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="case-study-card">
                         <div class="case-study-image">
-                            <img src="https://via.placeholder.com/400x250/60B0E0/FFFFFF?text=B2B+Success" alt="B2B Case Study" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="B2B Social Media Marketing Success Madurai - Digital Marketing Agency" class="img-fluid">
                         </div>
                         <div class="case-study-content">
                             <h4>B2B Lead Generation</h4>
@@ -305,7 +305,7 @@
                             </h2>
                             <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We are a leading social media marketing agency in Madurai with 3+ years of experience. Our team specializes in social media marketing for businesses of all sizes, including B2B companies. We provide organic social media marketing and comprehensive online marketing services.
+                                    We are a leading social media marketing agency in Madurai with 3+ years of experience. Our team specializes in social media marketing for businesses of all sizes. We provide organic social media marketing and comprehensive digital marketing services.
                                 </div>
                             </div>
                         </div>
@@ -324,12 +324,12 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="faq3">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
-                                    What online marketing services do you offer besides social media?
+                                    What digital marketing services do you offer besides social media?
                                 </button>
                             </h2>
                             <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Besides social media marketing, we offer comprehensive online marketing services including SEO, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                    Besides social media marketing, we offer comprehensive digital marketing services including SEO, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
                                 </div>
                             </div>
                         </div>
