--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About AdtoLeadz - Your Trusted Digital Marketing Partner in Madurai</title>
     <meta name="description" content="Discover AdtoLeadz's story, mission, and the passionate team behind our success. Learn how we've helped businesses in Madurai achieve their digital marketing goals with innovative strategies and proven results.">
-    <meta name="keywords" content="digital marketing services Madurai, about us, digital marketing team, company history, mission, vision, values, AdtoLeadz, marketing agency for startups, online marketing services">
+    <meta name="keywords" content="digital marketing services Madurai, about us, digital marketing team, company history, mission, vision, values, AdtoLeadz, marketing agency for startups">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="AdtoLeadz Logo" height="40">
+                <img src="images/logo.png" alt="AdtoLeadz Digital Marketing Agency Madurai Logo" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="overview-image">
-                        <img src="https://via.placeholder.com/600x400/2E78C0/FFFFFF?text=Our+Team+at+Work" alt="Our Team at Work" class="img-fluid rounded">
+                        <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Digital Marketing Team Madurai - AdtoLeadz Professional Team" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                 <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="https://via.placeholder.com/300x300/2E78C0/FFFFFF?text=Sarah+Johnson" alt="Sarah Johnson" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" alt="Sarah Johnson - SEO Specialist AdtoLeadz Madurai" class="img-fluid">
                             <div class="team-overlay">
                                 <div class="social-links">
                                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -232,7 +232,7 @@
                 <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="https://via.placeholder.com/300x300/60B0E0/FFFFFF?text=Michael+Chen" alt="Michael Chen" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" alt="Michael Chen - Social Media Marketing Expert AdtoLeadz Madurai" class="img-fluid">
                             <div class="team-overlay">
                                 <div class="social-links">
                                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -251,7 +251,7 @@
                 <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="https://via.placeholder.com/300x300/1A4A80/FFFFFF?text=Emily+Rodriguez" alt="Emily Rodriguez" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" alt="Emily Rodriguez - Web Design Specialist AdtoLeadz Madurai" class="img-fluid">
                             <div class="team-overlay">
                                 <div class="social-links">
                                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -270,7 +270,7 @@
                 <div class="col-lg-3 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="400">
                     <div class="team-card">
                         <div class="team-image">
-                            <img src="https://via.placeholder.com/300x300/2E78C0/FFFFFF?text=David+Kim" alt="David Kim" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" alt="David Kim - Digital Marketing Manager AdtoLeadz Madurai" class="img-fluid">
                             <div class="team-overlay">
                                 <div class="social-links">
                                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -379,7 +379,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="footer-brand">
-                        <img src="images/logo.png" alt="AdtoLeadz Logo" height="40" class="mb-3">
+                        <img src="images/logo.png" alt="AdtoLeadz Digital Marketing Agency Madurai Logo" height="40" class="mb-3">
                         <p>Transforming businesses through innovative digital marketing solutions. We help you grow, engage, and convert your audience into loyal customers.</p>
                     </div>
                 </div>
