--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact AdtoLeadz - Get Your Free Digital Marketing Consultation in Madurai</title>
     <meta name="description" content="Ready to grow your business? Contact AdtoLeadz in Madurai for a free consultation. Our digital marketing experts are here to help you achieve your online goals. Call or email us today!">
-    <meta name="keywords" content="digital marketing agency contact Madurai, contact AdtoLeadz, digital marketing consultation, web design quote, SEO services, social media marketing, online marketing services">
+    <meta name="keywords" content="digital marketing agency contact Madurai, contact AdtoLeadz, digital marketing consultation, web design quote, SEO services, social media marketing">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
