--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdtoLeadz - Premier Digital Marketing Agency in Madurai | Transform Your Business</title>
+    <title>Transform Your Business with Expert Digital Marketing in Madurai | AdtoLeadz</title>
     <meta name="description" content="Transform your business with AdtoLeadz, Madurai's trusted digital marketing partner. We specialize in SEO, social media marketing, and web design to drive growth and increase your online visibility.">
-    <meta name="keywords" content="digital marketing agency Madurai, SEO company Madurai, social media marketing for small business, marketing agency for startups, google SEO price, SEO marketing company near me, web digital marketing, social media agency, best social media marketing, organic social media marketing, B2B social media agency, online marketing services, PPC management services, SEO services in Madurai, content marketing company">
+    <meta name="keywords" content="digital marketing agency Madurai, SEO company Madurai, marketing agency for startups, google SEO price, SEO marketing company near me, web digital marketing, social media agency, best social media marketing, organic social media marketing, PPC management services, SEO services in Madurai, content marketing company">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -66,7 +66,7 @@
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6" data-aos="fade-right">
                     <h1 class="hero-title">Transform Your Business with Expert Digital Marketing in Madurai</h1>
-                    <p class="hero-subtitle">Transform your business with our comprehensive digital marketing solutions. We help you grow, engage, and convert your audience into loyal customers. AdtoLeadz has been providing both courses and services with more than 3+ years of experience in Madurai.</p>
+                    <p class="hero-subtitle">Transform your business with our comprehensive online marketing solutions. We help you grow, engage, and convert your audience into loyal customers. AdtoLeadz has been providing both courses and services with more than 3+ years of experience in Madurai.</p>
                     <div class="hero-buttons">
                         <a href="contact.html" class="btn btn-primary btn-lg me-3">Get Started</a>
                         <a href="about.html" class="btn btn-outline-light btn-lg">Learn More</a>
@@ -87,7 +87,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6" data-aos="fade-right">
                     <h2 class="section-title">About AdtoLeadz</h2>
-                    <p class="section-text">We are Madurai's premier digital marketing agency, dedicated to driving your business growth. Our expert team specializes in SEO, PPC, and social media marketing to boost your online presence. With over three years of expertise, we've helped numerous businesses thrive online.</p>
+                    <p class="section-text">We are Madurai's premier digital marketing agency, dedicated to driving your business growth. Our expert team specializes in search optimization, pay-per-click advertising, and social media marketing to boost your online presence. With over three years of expertise, we've helped numerous businesses thrive online.</p>
                     <p class="section-text">Our approach combines creativity, data-driven strategies, and cutting-edge technology to create campaigns that not only look great but also drive real business growth.</p>
                     <a href="about.html" class="btn btn-primary">Read More</a>
                 </div>
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">Our Specialized Digital Marketing Services</h2>
+                    <h2 class="section-title">Our Specialized Online Marketing Services</h2>
                     <p class="section-subtitle">Comprehensive solutions designed to grow your business and enhance your online presence</p>
                 </div>
             </div>
@@ -342,14 +342,14 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Latest from Our Blog</h2>
-                    <p class="section-subtitle">Stay updated with the latest digital marketing trends and insights</p>
+                    <p class="section-subtitle">Stay updated with the latest online marketing trends and insights</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="blog-card">
                         <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x250/2E78C0/FFFFFF?text=SEO+Tips" alt="SEO Services in Madurai - Digital Marketing Tips" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="SEO Services in Madurai - Digital Marketing Analytics and Search Optimization" class="img-fluid">
                         </div>
                         <div class="blog-content">
                             <h4>10 Essential SEO Tips for 2024</h4>
@@ -361,7 +361,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="blog-card">
                         <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x250/60B0E0/FFFFFF?text=Social+Media" alt="Social Media Marketing for Small Business - Madurai Agency" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Social Media Marketing Agency Madurai - Digital Marketing Strategy" class="img-fluid">
                         </div>
                         <div class="blog-content">
                             <h4>Social Media Marketing Trends 2024</h4>
@@ -373,7 +373,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="blog-card">
                         <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x250/1A4A80/FFFFFF?text=Web+Design" alt="Web Design Company Madurai - Digital Marketing Agency" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Web Design Company Madurai - Professional Website Development Services" class="img-fluid">
                         </div>
                         <div class="blog-content">
                             <h4>Web Design Best Practices</h4>
@@ -397,7 +397,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
                     <h2 class="section-title">Frequently Asked Questions</h2>
-                    <p class="section-subtitle">Common questions about our digital marketing services in Madurai</p>
+                    <p class="section-subtitle">Common questions about our online marketing services in Madurai</p>
                 </div>
             </div>
             <div class="row">
@@ -447,7 +447,7 @@
                             </h2>
                             <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We offer comprehensive online marketing services including SEO, social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                    We offer comprehensive online marketing services including search optimization, social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
                                 </div>
                             </div>
                         </div>
