--- a/single-blog.html
+++ b/single-blog.html
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-10 mx-auto">
                     <div class="featured-image" data-aos="fade-up">
-                        <img src="https://via.placeholder.com/1200x600/2E78C0/FFFFFF?text=SEO+Tips+2024" alt="SEO Tips 2024" class="img-fluid rounded">
+                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="SEO Tips 2024 Madurai - Search Engine Optimization Guide" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -208,7 +208,7 @@
                     <div class="author-bio mt-5" data-aos="fade-up">
                         <div class="author-card">
                             <div class="author-image">
-                                <img src="https://via.placeholder.com/100x100/2E78C0/FFFFFF?text=SJ" alt="Sarah Johnson" class="img-fluid rounded-circle">
+                                <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=200&q=80" alt="Sarah Johnson - SEO Specialist AdtoLeadz Madurai" class="img-fluid rounded-circle">
                             </div>
                             <div class="author-content">
                                 <h5>Sarah Johnson</h5>
@@ -230,7 +230,7 @@
                             <div class="col-md-6 mb-3">
                                 <div class="related-post">
                                     <div class="related-post-image">
-                                        <img src="https://via.placeholder.com/200x120/60B0E0/FFFFFF?text=SEO+Guide" alt="Related Post" class="img-fluid">
+                                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" alt="Complete SEO Guide Madurai - Digital Marketing Tutorial" class="img-fluid">
                                     </div>
                                     <div class="related-post-content">
                                         <h6><a href="#">Complete SEO Guide for Beginners</a></h6>
@@ -241,7 +241,7 @@
                             <div class="col-md-6 mb-3">
                                 <div class="related-post">
                                     <div class="related-post-image">
-                                        <img src="https://via.placeholder.com/200x120/1A4A80/FFFFFF?text=Technical+SEO" alt="Related Post" class="img-fluid">
+                                        <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" alt="Technical SEO Checklist Madurai - Website Optimization" class="img-fluid">
                                     </div>
                                     <div class="related-post-content">
                                         <h6><a href="#">Technical SEO Checklist 2024</a></h6>
