--- a/testimonials.html
+++ b/testimonials.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client Testimonials - Success Stories from AdtoLeadz | Digital Marketing Reviews</title>
-    <meta name="description" content="Read what our clients say about AdtoLeadz digital marketing services. Real testimonials from satisfied customers who achieved success with our help.">
-    <meta name="keywords" content="client testimonials, customer reviews, digital marketing success stories, AdtoLeadz reviews">
+    <meta name="description" content="Read what our clients say about AdtoLeadz digital marketing services in Madurai. Real testimonials from satisfied customers who achieved success with our help.">
+    <meta name="keywords" content="client testimonials Madurai, customer reviews, digital marketing success stories, AdtoLeadz reviews, digital marketing agency reviews Madurai">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
