--- a/web-design.html
+++ b/web-design.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Web Design Services in Madurai | Custom Websites That Convert | AdtoLeadz</title>
     <meta name="description" content="Create stunning, responsive websites with our web design team in Madurai. We build custom sites, e-commerce solutions, and WordPress websites that drive conversions and enhance user experience.">
-    <meta name="keywords" content="web design company Madurai, web digital marketing, professional web design services, responsive websites, WordPress development, e-commerce, custom websites, online marketing services">
+    <meta name="keywords" content="web design company Madurai, web digital marketing, professional web design services, responsive websites, WordPress development, e-commerce, custom websites">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="benefits-image">
-                        <img src="https://via.placeholder.com/600x400/2E78C0/FFFFFF?text=Web+Design+Process" alt="Web Design Process" class="img-fluid rounded">
+                        <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Web Design Process Madurai - Professional Website Development Services" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -284,7 +284,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="portfolio-card">
                         <div class="portfolio-image">
-                            <img src="https://via.placeholder.com/400x300/2E78C0/FFFFFF?text=E-commerce+Site" alt="E-commerce Website" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="E-commerce Website Design Madurai - Online Store Development" class="img-fluid">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-links">
                                     <a href="#" class="portfolio-link"><i class="fas fa-eye"></i></a>
@@ -301,7 +301,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="portfolio-card">
                         <div class="portfolio-image">
-                            <img src="https://via.placeholder.com/400x300/60B0E0/FFFFFF?text=Corporate+Site" alt="Corporate Website" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Corporate Website Design Madurai - Business Website Development" class="img-fluid">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-links">
                                     <a href="#" class="portfolio-link"><i class="fas fa-eye"></i></a>
@@ -318,7 +318,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="portfolio-card">
                         <div class="portfolio-image">
-                            <img src="https://via.placeholder.com/400x300/1A4A80/FFFFFF?text=Portfolio+Site" alt="Portfolio Website" class="img-fluid">
+                            <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Portfolio Website Design Madurai - Creative Web Development" class="img-fluid">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-links">
                                     <a href="#" class="portfolio-link"><i class="fas fa-eye"></i></a>
@@ -356,7 +356,7 @@
                             </h2>
                             <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We are a leading web design company in Madurai with 3+ years of experience. Our team specializes in creating responsive, SEO-friendly websites that convert visitors into customers. We offer comprehensive web design solutions and online marketing services.
+                                    We are a leading web design company in Madurai with 3+ years of experience. Our team specializes in creating responsive, SEO-friendly websites that convert visitors into customers. We offer comprehensive web design solutions and digital marketing services.
                                 </div>
                             </div>
                         </div>
@@ -375,12 +375,12 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="faq3">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
-                                    What online marketing services do you offer?
+                                    What digital marketing services do you offer?
                                 </button>
                             </h2>
                             <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    We offer comprehensive online marketing services including web design, SEO, social media marketing, PPC management, content marketing, and Google My Business optimization. We help businesses establish a strong online presence.
+                                    We offer comprehensive digital marketing services including web design, SEO, social media marketing, PPC management, content marketing, and Google My Business optimization. We help businesses establish a strong online presence.
                                 </div>
                             </div>
                         </div>
